<resources>
    <string name="app_name">Money Control</string>
    <string name="title_activity_home">Money Control</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_transaction_manager">Transaction Manager</string>
    <string name="title_activity_tag_manager">Tag</string>
    <string name="title_activity_type_manager">Payment Type</string>

    <string name="system_action_cancel">Cancel</string>
    <string name="system_action_done">Done</string>
    <string name="system_empty_field">--</string>
    <string name="system_error_required_field">\'%1$s\' is required.</string>
    <string name="system_error_not_allowed_field">\'%1$s\' is not allowed for this value.</string>
    <string name="system_message_saved">%1$s saved!</string>
    <string name="system_message_deleted">%1$s deleted!</string>
    <string name="system_yes">Yes</string>
    <string name="system_no">No</string>
    <string name="system_arrow">Arrow Down</string>
    <string name="system_save">Save</string>
    <string name="system_copy">Copy</string>

    <string name="system_actions_more_actions">More actions</string>

    <string name="home_menu_choose_month">Choose Month</string>
    <string name="home_menu_visibility_off">Hiding values</string>
    <string name="home_menu_visibility_on">Showing values</string>

    <string name="transaction_payment_type">Payment Type</string>
    <string name="transaction_price">Price</string>
    <string name="transaction_refund">Refund</string>
    <string name="transaction_payment_date">Payment Date</string>
    <string name="transaction_purchase_date">Purchase Date</string>
    <string name="transaction_content">Content</string>
    <string name="transaction_tag">Tag</string>
    <string name="transaction_filter_title">Transaction Filter</string>
    <string name="transaction_manager_title">Transaction Manager</string>
    <string name="transaction_payment_date_start">Payment Date Start</string>
    <string name="transaction_payment_date_end">Payment Date End</string>
    <string name="transaction_parcels">Parcels</string>
    <string name="transaction_already_paid">Already Paid</string>
    <string name="transaction">Transaction</string>
    <string name="title_activity_tag">Tag</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>
