<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transactionmanager.TransactionManagerFragment"
    tools:showIn="@layout/activity_transaction_manager">

    <ScrollView
        android:id="@+id/container_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/paymentTypeContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_type" />

                <TextView
                    android:id="@+id/paymentType"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="Cartão de Crédido Nubank" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/purchaseDateContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_purchase_date" />

                <TextView
                    android:id="@+id/purchaseDate"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="1 de março de 2017" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paymentDateContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_date" />

                <TextView
                    android:id="@+id/paymentDateC"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="25 de março de 2017" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="R$ 500,00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/refundContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_refund" />

                <TextView
                    android:id="@+id/refund"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="R$ 50,00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentContainer"
                style="@style/AppTheme.Card.Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Card.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_content" />

                <TextView
                    android:id="@+id/content"
                    style="@style/AppTheme.Card.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="Passagem de onibus voltando do trabalho" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>